--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,7 @@ south
 django-model-utils
 django-multiselectfield
 hg+https://bitbucket.org/dbinit/django-gmapi#egg=django-gmapi-new
-django-autocomplete-light
+django-autocomplete-light==2.3.3
 django-extra-views
 sorl-thumbnail
 raven
